using System;
using UnityEngine;

namespace Bomb
{
    public class NormalBombData : BombDataBase
    {
        public void Dispose()
        {
        }
    }
}